<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label1"
                tools:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                tools:textColor="@color/colorPrimaryDark"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label2"
                tools:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:textColor="@color/colorPrimaryDark"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label3"
                tools:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:textColor="@color/colorPrimaryDark"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label4"
                tools:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:textColor="@color/colorPrimaryDark"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label5"
                tools:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:textColor="@color/colorPrimaryDark"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label6"
                tools:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:textColor="@color/colorPrimaryDark"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label7"
                tools:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:textColor="@color/colorPrimaryDark"/>

        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="Book Cover" />

</LinearLayout>